TestEnvironment/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetName": {
            "type": "string",
            "metadata": {
            "description": "Name for the existing VNet."
            }
        },
        "bastionVmName": {
            "type": "string",
            "metadata": {
            "description": "Name for the bastionVirtual Machine."
            }
        },
        "bastionSubnetName": {
            "type": "string",
            "metadata": {
            "description": "Name for the bastion subnet."
            }
        },
        "bastionSubnetPrefix": {
            "type": "string",
            "metadata": {
            "description": "Prefix for the bastion subnet."
            }
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Username for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
            "description": "Password for the Virtual Machine."
            }
        },     
        "windowsOSVersion": {
            "type": "string",
            "defaultValue": "2016-Datacenter",
            "allowedValues": [
            "2008-R2-SP1",
            "2012-Datacenter",
            "2012-R2-Datacenter",
            "2016-Nano-Server",
            "2016-Datacenter-with-Containers",
            "2016-Datacenter"
            ],
            "metadata": {
            "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
            "description": "Location for all resources."
            }
        },
        "spokeVnetName": {
            "type": "string",
            "metadata": {
                "description": "Spoke VNet Name."
            }
        },
        "spokeVNetPrefix":{
            "type": "string",
            "metadata": {
                "description": "Spoke VNet Address Space"
            }
        },
        "spokeSubnetName": {
            "type": "string",
            "metadata": {
                "description": "Spoke Subnet Name"
            }
        },
        "spokeSubnetPrefix":{
            "type": "string",
            "metadata": {
                "description": "Spoke Subnet Address Space"
            }
        },
        "spokeVmName":{
            "type": "string",
            "metadata": {
                "description": "Spoke (Website) VNet Name"
            }
        }
    },
    "variables": {      
      "nicName": "[concat(parameters('bastionVmName'), '-NIC')]",      
      "publicIPAddressName": "[concat(parameters('bastionVmName'), '-PIP')]",         
      "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('bastionSubnetName'))]"            
    },
    "resources": [     
      {
        "apiVersion": "2016-03-30",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('publicIPAddressName')]",
        "location": "[parameters('location')]",
        "properties": {
          "publicIPAllocationMethod": "Dynamic"          
        }
      },
      {
        "comments": "NSG for RDP",
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "AllowRDP-Subnet",
        "location": "[parameters('location')]",
        "properties": {
            "securityRules": [
            {
                "name": "AllowRDP-Inbound",
                "properties": {
                    "description": "Rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },          
            {
                "name": "Default-Deny",
                "properties": {
                    "description": "Default-Deny if we don't match Allow rule",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 200,
                    "direction": "Inbound"
                }
            }]
        }
      },      
      {
        "comments": "NSG for Web",
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "AllowWeb-Subnet",
        "location": "[parameters('location')]",
        "properties": {
            "securityRules": [
            {
                "name": "AllowWeb-Inbound",
                "properties": {
                    "description": "Rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },          
            {
                "name": "Default-Deny",
                "properties": {
                    "description": "Default-Deny if we don't match Allow rule",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 200,
                    "direction": "Inbound"
                }
            }]
        }
      },
      {
        "comments": "New Bastion Subnet",
        "apiVersion": "2018-08-01",
        "type": "Microsoft.Network/virtualNetworks/subnets",        
        "name": "[concat(parameters('vnetName'), '/', parameters('bastionSubnetName'))]",
        "location": "[parameters('location')]",
        "properties": {
          "addressPrefix": "[parameters('bastionSubnetPrefix')]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'AllowRDP-Subnet')]"
          }
        }
      },
      {
        "comments": "NIC for bastionVM",
        "apiVersion": "2016-03-30",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('nicName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
          "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('vnetName'), parameters('bastionSubnetName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                },
                "subnet": {
                  "id": "[variables('subnetRef')]"
                }
              }
            }
          ]
        }
      },
      {
        "comments": "Bastion VM",
        "apiVersion": "2017-03-30",
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[parameters('bastionVmName')]",
        "location": "[parameters('location')]",
        "dependsOn": [          
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_A2"
          },
          "osProfile": {
            "computerName": "[parameters('bastionVmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "MicrosoftWindowsServer",
              "offer": "WindowsServer",
              "sku": "[parameters('windowsOSVersion')]",
              "version": "latest"
            },
            "osDisk": {
              "createOption": "FromImage"
            },
            "dataDisks": [
              {
                "diskSizeGB": 1023,
                "lun": 0,
                "createOption": "Empty"
              }
            ]
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
              }
            ]
          }
        }
      }
    ],
    "outputs": {     
      "bastionvmip": {
        "type": "string",
        "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))).IpAddress]"        
      }
    }
  }
